--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,3 +3,25 @@ body {
   background-color: #191c20;
   color: #eeeeee;
 }
+.container{
+  display: flex;
+  min-height: 90vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
+
+  > * {
+    flex: 1;
+    display: block;
+    // width: 100%;
+    max-width: 400px;
+    height: auto;
+    // margin-left: auto;
+    // margin-right: auto;
+  }
+}
+
+.hidden {
+  display: none;
+}
